--- a/style.css
+++ b/style.css
@@ -26,6 +26,37 @@ body {
     border: 1px solid black; 
 }
 
+.powerupTableCell {
+    width: 7em;
+    padding: 3px;
+    border-style: none solid none solid;
+    border-width: 1px;
+}
+
+.powerupTable {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+.menuCell {
+    width: 4em;
+    padding: 3px;
+    border: 1px solid black;
+    text-align: center;
+    color: grey;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.selected{
+    border: 2px solid black;
+    color: black;
+}
+
 .progressBackground {
     width: 100%;
     height: 100%;
@@ -53,9 +84,10 @@ body {
     border-style: solid;
     border-width: 1px;
     box-shadow: 4px 4px 3px grey;
-    padding: 4px; 
+    padding: 6px; 
     margin: 10px;
     float: left;
+    clear: both;
 }
 
 #payoutTableDiv{
@@ -87,9 +119,27 @@ body {
     vertical-align: middle;
 }
 
-#menuDiv{
+/*#menuDiv{
     padding: 4px;
+    float: right;
+    clear: left;
     position: absolute;
     bottom: 10px;
     right: 10px;
 }
+*/
+#abilitiesBox{
+    width: 30%;
+}
+/*
+#settingsDiv{
+    display: none;
+    z-index: 10; 
+    position: absolute; 
+    top: 20%; 
+    left: 20%; 
+    height: 60%;
+    width: 60%;
+    background: white;
+}*/
+
