--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ body {
     background-color: dimgrey;
 }
 
+.importExportBox {
+    font-size: 0.75em;
+}
+
 #statusbox {
     width: calc(100%-10px);
     /*height: 1.2em;*/
